# cido-api

./: .travis.yml  cido-api.cabal
db/: schema.sql
lib/: Util.hs
lib/Cido/: Api.hs  Queries.hs  Types.hs
lib/Cido/Api/: User.hs
lib/Cido/Queries/: User.hs
lib/Cido/Resources/: User.hs
lib/Cido/Types/: NewUser.hs  Server.hs  User.hs
src/: Main.hs  Utility.hs
src/Cido/: Queries.hs
src/Cido/Resources/: User.hs
src/Cido/Types/: Server.hs
