name:                cido-api
version:             0.0.1.0
synopsis:            Haskell REST API for Cido
homepage:            https://github.com/L8D/cido-api
license:             MIT
license-file:        LICENSE
author:              Tenor Biel
maintainer:          tenorbiel@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
source-repository head
  type:              git
  location:          https://github.com/L8D/cido-api.git

library
  ghc-options:         -W -Wall -Werror
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
