name:                cido-api
version:             0.0.1.0
synopsis:            Haskell REST API for Cido
homepage:            https://github.com/L8D/cido-api
license:             MIT
license-file:        LICENSE
author:              Tenor Biel
maintainer:          tenorbiel@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
source-repository head
  type:              git
  location:          https://github.com/L8D/cido-api.git

library
  ghc-options:         -W -Wall
  exposed-modules:     Cido.Types.Server,
                       Cido.Types.User,
                       Cido.Resources.User,
                       Cido.Queries.User,
                       Cido.Api
  build-depends:       base >=4.7 && <4.8,
                       rest-core >=0.34 && <0.35,
                       rest-types >=1.12 && <1.13,
                       hasql >=0.7.2 && <0.7.3,
                       hasql-postgres >=0.10.2 && <0.10.3,
                       json-schema >=0.7 && < 0.8,
                       regular >=0.3 && <0.4,
                       regular-xmlpickler == 0.2,
                       text >=1.2 && <1.3,
                       aeson >=0.8 && <0.9,
                       uuid == 1.3.8,
                       mtl >=2.1 && <2.2,
                       hxt >=9.3 && <9.4
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable cido-server
  ghc-options:         -W -Wall -threaded
  main-is:             Main.hs
  build-depends:       base,
                       happstack-server >= 7.4 && <7.5,
                       cido-api,
                       rest-core,
                       rest-happstack >= 0.2.10 && <0.2.11,
                       hasql,
                       hasql-postgres,
                       bytestring >= 0.10.4 && <0.10.5,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
