name:                cido-api
version:             0.0.1.0
synopsis:            Haskell REST API for Cido
homepage:            https://github.com/L8D/cido-api
license:             MIT
license-file:        LICENSE
author:              Tenor Biel
maintainer:          tenorbiel@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
source-repository head
  type:              git
  location:          https://github.com/L8D/cido-api.git

library
  ghc-options:         -W -Wall
  exposed-modules:     Cido.Types,
                       Cido.Types.User,
                       Cido.Types.NewUser,
                       Cido.Api,
                       Cido.Api.User,
                       Cido.Queries,
                       Cido.Queries.User,
                       Util
  build-depends:       base >=4.7 && <4.8,
                       hasql >=0.7.2 && <0.7.3,
                       hasql-postgres >=0.10.2 && <0.10.3,
                       text >=1.2 && <1.3,
                       aeson >=0.8 && <0.9,
                       mtl >=2.1 && <2.2,
                       uuid >=1.3.8 && <1.4,
                       time >=1.4 && <1.5,
                       bytestring >=0.10.4 && <0.10.5,
                       happstack-server >=7.4 && <7.5,
                       transformers >=0.3 && <0.4,
                       hasql-backend >=0.4 && <0.5,
                       uuid-aeson == 0.1.0.0
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable cido-server
  ghc-options:         -W -Wall -threaded
  main-is:             Main.hs
  build-depends:       base,
                       happstack-server,
                       cido-api,
                       hasql,
                       hasql-postgres,
                       bytestring,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
